--- a/calendar.html
+++ b/calendar.html
@@ -117,8 +117,8 @@ dates from <b>PDB entries released before 2018-01-24</b>.</h4>
  <p><b><a href="https://github.com/project-gemmi/pdb-stats">
  Source code and info...</a></b>
 </div>
-<!--script src="https://d3js.org/d3.v4.min.js"></script-->
-<script src="d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<!--script src="d3.v4.min.js"></script-->
 <script type="text/javascript">
 "use strict";
 
