WIP: list of chemical components

--- a/tags.html
+++ b/tags.html
@@ -133,7 +133,7 @@ th[role=columnheader]:not(.no-sort):hover:after {
 </div>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <!--script src="d3.v4.min.js"></script-->
-<script src="tablesort.min.js"></script>
+<script src="js/tablesort.min.js"></script>
 <script type="text/javascript">
 "use strict";
 
