--- a/trends.html
+++ b/trends.html
@@ -36,7 +36,7 @@ text.x-axis-label { font-size: 12px; }
 <h2>Trends in the PDB entries</h2>
 <p id="subh">
 A different presentation of the same data as on
-<a href="index.html">the main page</a>.
+<a href="xray.html">the main page</a>.
 <h1 id="loading">LOADING DATA...</h1>
 <div id="chart-facility" style="visibility: hidden;">
  <strong>Facility</strong>
