--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ li .h2 { font-size: 20px; display: block; margin: 10px 0; font-weight: bold; }
 #footer { font-size: 13px; }
 a:link, a:visited { text-decoration: none; color: #16a; }
 ul { list-style-type: none; margin: 40px 0; padding: 0; }
-hr { color: #888; background-color: #888; clear: both; margin: 0; }
+hr { color: #888; background-color: #888; clear: both; margin: 60px 0 0; }
 li img { float: left; margin: 0 30px 0 0; vertical-align: bottom;
          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
 @media only screen and (max-width: 600px) {
@@ -55,11 +55,11 @@ A table that counts in how many entries each residue and ligand is present.
 
 <hr>
 <div id="footer">
-These statistics also show how to use
-<a href="https://project-gemmi.github.io/">project GEMMI</a>
-(in particular one of the utilities: <code>gemmi-grep</code>)
-to quickly extract data from mmCIF files.
-For techinical details and more information see the
+This project also shows how
+<a href="https://project-gemmi.github.io/">GEMMI</a>,
+and in particular one of the utilities: <code>gemmi-grep</code>,
+can be used to quickly extract data from mmCIF files.
+For technical details and more information see the
 <a href="https://github.com/project-gemmi/pdb-stats">source code repository</a>.
 <br/>GEMMI is funded by CCP4 and Global Phasing Ltd.
 </div>
