--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ Plus other correlations.
 <span class="h2">Synchrotron work patterns</span></a>
 What can we tell from data collection dates in the PDB?
 
+<li><a href="../periodic-table/"><img src="thumbs/periodic-table.png" alt="">
+<span class="h2">Periodic table in the PDB</span></a>
+Searching PDB entries by elements.
+
 <li><a href="tags.html"><img src="thumbs/tags.png" alt="">
 <span class="h2">PDBx/mmCIF tags</span></a>
 A table that shows which tags are actually in use.
