--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Searching PDB entries by elements.
 <span class="h2">PDBx/mmCIF tags</span></a>
 A table that shows which tags are actually in use.
 
-<li><a href="residue.html"><img src="thumbs/residue.png" alt="">
+<li><a href="residues.html"><img src="thumbs/residue.png" alt="">
 <span class="h2">Frequency of chemical components</span></a>
 A table that counts in how many entries each residue and ligand is present.
 
