--- a/trends.html
+++ b/trends.html
@@ -87,15 +87,19 @@ var refinement_chart = dc.seriesChart('#chart-refinement');
 
 var YEARS = [2009, 2018];
 var DATE_FIELD = 9; // d[9] is release date
-var X_LABEL = 'Release Year';
 var params = window.location.hash.substr(1).split('&');
+var PER_QUARTER = (params.indexOf('quarter') !== -1);
+var TIMESPAN = PER_QUARTER ? 'Quarter' : 'Year';
+var X_LABEL = 'Release ' + TIMESPAN;
 if (params.indexOf('depos') !== -1) { // deposition date
   YEARS = [2008, 2017.5];
   DATE_FIELD = 8; // d[8] is deposition date
-  X_LABEL = 'Deposition Year';
+  X_LABEL = 'Deposition ' + TIMESPAN;
+}
+if (PER_QUARTER) {
+    YEARS[1] += 0.125;
 }
 var AS_PERCENT = (params.indexOf('percent') !== -1);
-var PER_QUARTER = (params.indexOf('quarter') !== -1);
 
 d3.json('data.json', function(json) {
   var SOURCES = {
@@ -149,7 +153,7 @@ d3.json('data.json', function(json) {
                     'SIRAS', 'MIRAS', 'unspecified / other'];
   if (PER_QUARTER) {
     json.forEach(function (d) {
-      d[0] = 1989 + (((d[DATE_FIELD] >> 5) / 3) | 0) / 4;
+      d[0] = 1989.125 + (((d[DATE_FIELD] >> 5) / 3) | 0) / 4;
     });
   } else {
     json.forEach(function (d) {
