--- a/residues.html
+++ b/residues.html
@@ -54,7 +54,7 @@ a:link, a:visited { text-decoration: none; }
  <p><b><a href="https://github.com/project-gemmi/pdb-stats">
  Source code and info...</a></b>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/datatables.min.js"></script>
 <script type="text/javascript">
 "use strict";
