--- a/tags.html
+++ b/tags.html
@@ -62,6 +62,21 @@ th[role=columnheader]:not(.no-sort):hover:after {
   visibility: visible;
   opacity: 1;
 }
+
+span[eg] {
+  position: relative;
+}
+span[eg]:hover:after {
+  content: "e.g.\00a0" attr(eg);
+  display: block;
+  z-index: 10;
+  background-color: rgba(255,255,204,0.8); /*#ffc*/
+  padding: 0 3px;
+  border: 1px solid rgba(238,238,170,0.8); /*#eea*/
+  position: absolute;
+  top: -100%;
+  left: 10%;
+}
 </style>
 </head>
 <body>
@@ -76,13 +91,16 @@ th[role=columnheader]:not(.no-sort):hover:after {
 <h2 id="coor">Coordinate Files</h2>
 <table id="coor-table">
  <thead>
+  <tr data-sort-method='thead'>
+   <th rowspan="2" aria-sort="ascending">Tag</th>
+   <th rowspan="2" data-sort-method="number">in %</th>
+   <th data-sort-method="number">min</th>
+   <th data-sort-method="number">avg</th>
+   <th data-sort-method="number">max</th>
+   <th rowspan="2" data-sort-method="none" class="no-sort">values</th>
+  </tr>
   <tr>
-   <th aria-sort="ascending">Tag</th>
-   <th data-sort-method="number">in %</th>
-   <th data-sort-method="number"># min</th>
-   <th data-sort-method="number"># avg</th>
-   <th data-sort-method="number"># max</th>
-   <th data-sort-method="none" class="no-sort">values</th>
+   <th colspan="3">values per block</th>
   </tr>
  </thead>
 </table>
@@ -90,13 +108,16 @@ th[role=columnheader]:not(.no-sort):hover:after {
 <h2 id="sf">Structure Factor Files</h2>
 <table id="sf-table">
  <thead>
+  <tr data-sort-method='thead'>
+   <th rowspan="2" aria-sort="ascending">Tag</th>
+   <th rowspan="2" data-sort-method="number">in %</th>
+   <th data-sort-method="number">min</th>
+   <th data-sort-method="number">avg</th>
+   <th data-sort-method="number">max</th>
+   <th rowspan="2" data-sort-method="none" class="no-sort">values</th>
+  </tr>
   <tr>
-   <th aria-sort="ascending">Tag</th>
-   <th data-sort-method="number">in %</th>
-   <th data-sort-method="number"># min</th>
-   <th data-sort-method="number"># avg</th>
-   <th data-sort-method="number"># max</th>
-   <th data-sort-method="none" class="no-sort">values</th>
+   <th colspan="3">values per block</th>
   </tr>
  </thead>
 </table>
@@ -104,13 +125,16 @@ th[role=columnheader]:not(.no-sort):hover:after {
 <h2 id="ccd">Chemical Component Dictionary (CCD)</h2>
 <table id="ccd-table">
  <thead>
+  <tr data-sort-method='thead'>
+   <th rowspan="2" aria-sort="ascending">Tag</th>
+   <th rowspan="2" data-sort-method="number">in %</th>
+   <th data-sort-method="number">min</th>
+   <th data-sort-method="number">avg</th>
+   <th data-sort-method="number">max</th>
+   <th rowspan="2" data-sort-method="none" class="no-sort">values</th>
+  </tr>
   <tr>
-   <th aria-sort="ascending">Tag</th>
-   <th data-sort-method="number">in %</th>
-   <th data-sort-method="number"># min</th>
-   <th data-sort-method="number"># avg</th>
-   <th data-sort-method="number"># max</th>
-   <th data-sort-method="none" class="no-sort">values</th>
+   <th colspan="3">values per block</th>
   </tr>
  </thead>
 </table>
@@ -120,7 +144,7 @@ th[role=columnheader]:not(.no-sort):hover:after {
  <a href="https://project-gemmi.github.io/">project GEMMI</a>.
  Uses <a href="https://d3js.org/">d3.js</a>
  and <a href="http://tristen.ca/tablesort/demo/">tablesort</a>.
- Data was extracted from wwPDB on 2019-08-21.
+ Data was extracted from wwPDB on 2020-03-14.
  <p><b><a href="https://github.com/project-gemmi/pdb-stats">
  Source code and info...</a></b>
 </div>
@@ -134,13 +158,16 @@ function tr_html(d) {
   var row = '<td>' + d[0] + '</td><td>' + d[1] + '</td><td>' +
          d[2] + '</td><td>' + d[3] + '</td><td>' + d[4] + '</td><td>';
   for (var i = 5; i < d.length; ++i) {
-    var s = d[i].indexOf(' ');
-    row += d[i].substring(0, s);
-    if (d[i][s+1] === '{') {
-      row += '×' + d[i].substring(s+1) + ' ';
+    var s1 = d[i].indexOf(' ');
+    var s2 = d[i].indexOf(' ', s1+1);
+    row += '<span eg="' + d[i].substring(s1+1, s2) + '">';
+    row += d[i].substring(0, s1);
+    if (d[i][s2+1] === '{') {
+      row += '×' + d[i].substring(s2+1);
     } else {
-      row += '×<code>' + d[i].substring(s+1) + '</code> ';
+      row += '×<code>' + d[i].substring(s2+1) + '</code>';
     }
+    row += '</span> ';
   }
   return row + '</td>';
 }
