--- a/tags.html
+++ b/tags.html
@@ -148,8 +148,12 @@ span[eg]:hover:after {
  <p><b><a href="https://github.com/project-gemmi/pdb-stats">
  Source code and info...</a></b>
 </div>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<!--script src="d3.v4.min.js"></script-->
+<!--script src="https://d3js.org/d3.v4.min.js"></script-->
+<script src="js/d3-collection.v1.min.js"></script>
+<script src="js/d3-dispatch.v1.min.js"></script>
+<script src="js/d3-dsv.v1.min.js"></script>
+<script src="js/d3-request.v1.min.js"></script>
+<script src="js/d3-selection.v1.min.js"></script>
 <script src="js/tablesort.min.js"></script>
 <script type="text/javascript">
 "use strict";
