Add a few missing articles.

--- a/cod-tags.html
+++ b/cod-tags.html
@@ -126,7 +126,7 @@ span[eg]:hover:after {
  <a href="https://project-gemmi.github.io/">project GEMMI</a>.
  Uses <a href="https://d3js.org/">d3.js</a>
  and <a href="http://tristen.ca/tablesort/demo/">tablesort</a>.
- Data was extracted from COD on 2021-04-23.
+ Data was extracted from the COD on 2021-04-23.
  <p><b><a href="https://github.com/project-gemmi/pdb-stats">
  Source code and info...</a></b>
 </div>
