--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Searching PDB entries by elements.
 <li><a href="tags.html"><img src="thumbs/tags.png" alt="">
 <span class="h2">PDBx/mmCIF tags</span></a>
 A table that shows which tags are actually in use.
-<br>And <a href="cod-tags.html">here is a similar table for COD</a>.
+<br>And <a href="cod-tags.html">here is a similar table for the COD</a>.
 
 <li><a href="residues.html"><img src="thumbs/residue.png" alt="">
 <span class="h2">Frequency of chemical components</span></a>
