Remove a stray "</ul>".

--- a/cod-tags.html
+++ b/cod-tags.html
@@ -85,7 +85,7 @@ span[eg]:hover:after {
  Jump to:
  <a href="#coor">CIF Files</a>
  <a href="#sf">HKL Files</a>
-</ul></nav>
+</nav>
 
 <h2 id="coor">CIF Files</h2>
 <table id="coor-table">
